--- a/Reno.MVC/Views/Home/_Graphs.cshtml
+++ b/Reno.MVC/Views/Home/_Graphs.cshtml
@@ -87,40 +87,44 @@
     </div>
 </div>
 
-<div class="row t-margin">
-    <div class="col-lg-6">
-        <div class="ibox shadow">
-            <div class="ibox-title">
-                <h5>
-                    Dialysis Units Supporting Treatment
-                </h5>
+@if (User.IsInRole("Admin"))
+{
+    <div class="row t-margin">
+        <div class="col-lg-6">
+            <div class="ibox shadow">
+                <div class="ibox-title">
+                    <h5>
+                        Dialysis Units Supporting Treatment
+                    </h5>
+                </div>
+                <div class="ibox-content">
+                    <div>
+                        <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                        <canvas id="treatment-barChart" height="331" style="display: block; height: 265px; width: 568px;" width="710" class="chartjs-render-monitor"></canvas>
+                    </div>
+                </div>
             </div>
-            <div class="ibox-content">
-                <div>
-                    <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                    <canvas id="treatment-barChart" height="331" style="display: block; height: 265px; width: 568px;" width="710" class="chartjs-render-monitor"></canvas>
+        </div>
+
+    </div>
+
+
+    <div class="row t-margin">
+        <div class="col-lg-12">
+            <div class="ibox shadow">
+                <div class="ibox-title">
+                    <h5>
+                        Map
+                    </h5>
+                </div>
+                <div class="ibox-content">
+                    <div id="world-map" style="height: 300px;"></div>
                 </div>
             </div>
         </div>
     </div>
 
-</div>
-
-
-<div class="row t-margin">
-    <div class="col-lg-12">
-        <div class="ibox shadow">
-            <div class="ibox-title">
-                <h5>
-                    Map
-                </h5>
-            </div>
-            <div class="ibox-content">
-                <div id="world-map" style="height: 300px;"></div>
-            </div>
-        </div>
-    </div>
-</div>
+} 
 
 
 <script src="~/js/plugins/charts/chart.min.js"></script>
